# slack-offboarding

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  run.py  slack-app-manifest.yml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: app.py  cli.py  config.py
src/routes/: auth.py  main.py
src/services/: __init__.py  job_manager.py  slack_cleaner.py
static/css/: style.css
static/js/: app.js
templates/: dashboard.html  index.html
tests/: test_app.py
