[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-offboarding"
version = "2.0.0"
description = "Clean up your Slack workspace before you leave. Delete DMs, leave channels, and archive your data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ruwad", email = "hello@ruwad.dev" }
]
keywords = ["slack", "offboarding", "cleanup", "messages", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
    "slack-sdk>=3.27",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "rich>=13.0",
    "click>=8.1",
    "sentry-sdk[fastapi]>=2.0",
]

[project.scripts]
offboarding = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "niquests>=3.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.urls]
Homepage = "https://github.com/ruwad-io/slack-offboarding"
Issues = "https://github.com/ruwad-io/slack-offboarding/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
